# grpc-rust

./: Cargo.toml  README.md
proto/: services.proto
src/: grpc_client.rs  grpc_server.rs
